--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,6 @@
   <input type="text" id="address" placeholder="Enter an address" autocomplete="on">
   <button onclick="addAddress()">Add</button>
 
-  <ol id="addressList"></ol>
-
   <p>Type a starting address and an ending address below:</p>
   <div>
     <input type="text" id="start" placeholder="Starting address" autocomplete="on">
@@ -18,7 +16,11 @@
     <button onclick="getRoute()">Get Route</button>
   </div>
 
-  <script src="https://www.bing.com/api/maps/mapcontrol?key=AgJByZBI9tU_t6bMrFcSycB-RNlS8uCQcMQssXD8TH7czDq0plnAu9pDXEePtU6W"></script>
+  <ol id="addressList"></ol>
+
+  <div id="routeInfo"></div>
+
+  <script src="https://www.bing.com/api/maps/mapcontrol?key=AgJByZBI9tU_t6bMrFcSycB-RNlS8uCQcMQssXD8TH7czDq0plnAu9pDXEePtU6W&callback=loadMapScenario" async defer></script>
   <script>
     var addresses = [];
 
@@ -72,25 +74,24 @@
           return distances[indexA] - distances[indexB];
         });
 
-        waypointList.clear();
-        waypointList.push(new Microsoft.Maps.Directions.Waypoint({ address: start }));
-        for (var i = 0; i < sortedAddresses.length; i++) {
-          waypointList.push(new Microsoft.Maps.Directions.Waypoint({ address: sortedAddresses[i] }));
-        }
-        waypointList.push(new Microsoft.Maps.Directions.Waypoint({ address: end }));
-
-        directionsManager.calculateDirections();
-
         var ol = document.getElementById("addressList");
         ol.innerHTML = "";
-        for (var i = 0; i < waypointList.getLength(); i++) {
+        for (var i = 0; i < sortedAddresses.length; i++) {
           var li = document.createElement("li");
-          li.appendChild(document.createTextNode((i + 1) + ". " + waypointList.get(i).getAddress().formattedAddress));
+          li.appendChild(document.createTextNode((i + 1) + ". " + sortedAddresses[i]));
           ol.appendChild(li);
         }
+
+        directionsManager.calculateDirections({
+          successCallback: function (result) {
+            var routeSummary = result.routes[0].routeSummary;
+            var distance = routeSummary.distance.toFixed(2);
+            var time = routeSummary.travelTime.toFixed(2);
+            var routeInfo = document.getElementById("routeInfo");
+            routeInfo.innerHTML = "Estimated route distance: " + distance +
+            " miles. Estimated travel time: " + time + " minutes.";
+          }
+        });
       });
     }
-  </script>
-  <div id="myMap" style="position:relative;width:600px;height:400px;"></div>
-</body>
-</html>
+  </script
