--- a/Index.html
+++ b/Index.html
@@ -41,10 +41,16 @@
     ol#givenAddresses {
       color: black;
       font-size: 18px;
+      border: 2px solid #ccc;
+      border-radius: 4px;
+      padding: 20px;
     }
     ol#routeOrder {
       color: blue;
       font-size: 18px;
+      border: 2px solid #ccc;
+      border-radius: 4px;
+      padding: 20px;
     }
     div#routeInfo {
       color: #333;
@@ -115,3 +121,4 @@
 
         var startLocation = new Microsoft.Maps.Location(waypointList.get(0).latitude, waypointList.get(0).longitude);
         var endLocation = new Microsoft.Maps.Location(waypointList.get(waypointList.getLength() - 1).latitude, waypointList.get(waypointList.getLength() -
+[user
