--- a/Index.html
+++ b/Index.html
@@ -77,7 +77,7 @@
 
   <div id="routeInfo"></div>
 
-  <script src="https://www.bing.com/api/maps/mapcontrol?key=AgJByZBI9tU_t6bMrFcSycB-RNlS8uCQcMQssXD8TH7czDq0plnAu9pDXEePtU6W&callback=loadMapScenario" async defer></script>
+  <script src="https://www.bing.com/api/maps/mapcontrol?key=AgJByZBI9tU_t6bMrFcSycB-RNlS8uCQcMQssXD8TH7czDq0plnAu9pDXEePtU6W" async defer></script>
   <script>
     var givenAddresses = [];
     var routeOrder = [];
