--- a/Index.html
+++ b/Index.html
@@ -56,10 +56,6 @@
       color: #333;
       font-size: 18px;
     }
-    #myMap {
-      width: 100%;
-      height: 400px;
-    }
   </style>
 </head>
 <body>
@@ -81,11 +77,10 @@
 
   <div id="routeInfo"></div>
 
-  <div id="myMap"></div> <!-- Added map container -->
-
   <script src="https://www.bing.com/api/maps/mapcontrol?key=AgJByZBI9tU_t6bMrFcSycB-RNlS8uCQcMQssXD8TH7czDq0plnAu9pDXEePtU6W"></script>
   <script>
     var givenAddresses = [];
+    var map;
 
     function addAddress() {
       var address = document.getElementById("address").value;
@@ -101,8 +96,7 @@
       var start = document.getElementById("start").value;
       var end = document.getElementById("end").value;
 
-      var map = new Microsoft.Maps.Map(document.getElementById('myMap'), {}); // Updated map container
-      var directionsManager = new Microsoft.Maps.Directions.DirectionsManager(map);
+      var directionsManager = new Microsoft.Maps.Directions.DirectionsManager();
       var waypointList = new Microsoft.Maps.Directions.WaypointList();
 
       waypointList.push(new Microsoft.Maps.Directions.Waypoint({ address: start }));
@@ -119,12 +113,47 @@
 
       directionsManager.setWaypoints(waypointList);
 
+      Microsoft.Maps.loadModule('Microsoft.Maps.Autosuggest', function () {
+        var options = {
+          maxResults: 5,
+          map: map,
+          countryCode: 'US'
+        };
+
+        var manager = new Microsoft.Maps.AutosuggestManager(options);
+        manager.attachAutosuggest('#address', '#address', selectedSuggestion);
+      });
+
       Microsoft.Maps.loadModule('Microsoft.Maps.SpatialMath', function () {
-        // Your existing getRoute function remains unchanged
+        directionsManager.calculateDirections({
+          successCallback: function (result) {
+            // Display ordered addresses in the route order list
+            var routeOrder = givenAddresses.slice().sort(function (a, b) {
+              var indexA = givenAddresses.indexOf(a);
+              var indexB = givenAddresses.indexOf(b);
+              return result.routes[0].waypoints[indexA].location.longitude - result.routes[0].waypoints[indexB].location.longitude;
+            });
+
+            var ol = document.getElementById("routeOrder");
+            ol.innerHTML = "";
+            for (var i = 0; i < routeOrder.length; i++) {
+              var li = document.createElement("li");
+              li.appendChild(document.createTextNode((i + 1) + ". " + routeOrder[i]));
+              ol.appendChild(li);
+            }
+          }
+        });
       });
     }
 
-    // Add this code to handle errors
+    function selectedSuggestion(suggestionResult) {
+      document.getElementById("address").value = suggestionResult.formattedSuggestion;
+    }
+
+    window.onload = function () {
+      map = new Microsoft.Maps.Map(document.getElementById('myMap'), {}); // Map container reinstated
+    };
+
     window.onerror = function(msg, url, lineNo, columnNo, error) {
       var message = [
         'Message: ' + msg,
