--- a/Index.html
+++ b/Index.html
@@ -1,22 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Address List</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Address List & Routing</title>
   <style>
-    /* Your existing styles remain unchanged */
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f8f8f8;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      color: #007BFF;
+    }
+
+    input[type="text"] {
+      padding: 10px;
+      margin: 5px 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+      width: 100%;
+    }
+
+    button {
+      background-color: #007BFF;
+      color: #fff;
+      padding: 10px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    ol {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      margin: 5px 0;
+    }
+
+    #routeOrder {
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
-  <h1>Address List</h1>
-  <p>Type an address below:</p>
-  <input type="text" id="address" placeholder="Enter an address" autocomplete="on">
-  <button onclick="addAddress()">Add</button>
+  <h1>Address List & Routing</h1>
+  
+  <div>
+    <label for="address">Type an address below:</label>
+    <input type="text" id="address" placeholder="Enter an address" autocomplete="on">
+    <button onclick="addAddress()">Add</button>
+  </div>
 
   <ol id="givenAddresses"></ol>
 
-  <p>Type a starting address and an ending address below:</p>
   <div>
+    <label for="start">Type a starting address:</label>
     <input type="text" id="start" placeholder="Starting address" autocomplete="on">
+    <label for="end">Type an ending address:</label>
     <input type="text" id="end" placeholder="Ending address" autocomplete="on">
     <button onclick="getRoute()">Get Route</button>
   </div>
@@ -25,10 +76,10 @@
 
   <div id="routeInfo"></div>
 
-  <script src="https://www.bing.com/api/maps/mapcontrol?key=AhxVsVrpiDDCLINWvIO1Y8lB5QANh6lPoLShF70BRnuoSvgWWIBGoMz2yh1vxxxS&callback=initializeMap" async defer></script>
+  <script src="https://maps.openrouteservice.org/assets/js/ors-js-client.js"></script>
   <script>
     var givenAddresses = [];
-    var map;
+    var orsClient;
 
     function addAddress() {
       var address = document.getElementById("address").value;
@@ -40,85 +91,48 @@
       document.getElementById("address").value = "";
     }
 
-    function initializeMap() {
-      map = new Microsoft.Maps.Map(document.getElementById('myMap'), {});
-    }
-
     function getRoute() {
       var start = document.getElementById("start").value;
       var end = document.getElementById("end").value;
 
-      var directionsManager = new Microsoft.Maps.Directions.DirectionsManager(map);
-      var waypointList = new Microsoft.Maps.Directions.WaypointList();
+      orsClient = new OpenRouteService.Client({ key: '5b3ce3597851110001cf624890270b75be3144bea8764bf3d5915a6b' }); // Replace 'YOUR_API_KEY' with your actual API key
 
-      waypointList.push(new Microsoft.Maps.Directions.Waypoint({ address: start }));
-      for (var i = 0; i < givenAddresses.length; i++) {
-        waypointList.push(new Microsoft.Maps.Directions.Waypoint({ address: givenAddresses[i] }));
+      var waypoints = givenAddresses.map(function (address) {
+        return { lat: null, lon: null, name: address };
+      });
+
+      orsClient.directions({
+        coordinates: [
+          { lat: null, lon: null, name: start },
+          ...waypoints,
+          { lat: null, lon: null, name: end }
+        ],
+        profile: 'driving-car',
+        format: 'geojson',
+      })
+      .then(function (data) {
+        displayRouteOrder(data);
+      })
+      .catch(function (error) {
+        console.error('Error fetching route:', error);
+      });
+    }
+
+    function displayRouteOrder(data) {
+      var routeOrder = givenAddresses.slice().sort(function (a, b) {
+        var indexA = givenAddresses.indexOf(a);
+        var indexB = givenAddresses.indexOf(b);
+        return data.features[0].geometry.coordinates[indexA][0] - data.features[0].geometry.coordinates[indexB][0];
+      });
+
+      var ol = document.getElementById("routeOrder");
+      ol.innerHTML = "";
+      for (var i = 0; i < routeOrder.length; i++) {
+        var li = document.createElement("li");
+        li.appendChild(document.createTextNode((i + 1) + ". " + routeOrder[i]));
+        ol.appendChild(li);
       }
-      waypointList.push(new Microsoft.Maps.Directions.Waypoint({ address: end }));
-
-      directionsManager.setRequestOptions({
-        routeMode: Microsoft.Maps.Directions.RouteMode.driving,
-        routeDraggable: false,
-        optimizeWaypoints: true
-      });
-
-      directionsManager.setWaypoints(waypointList);
-
-      Microsoft.Maps.loadModule('Microsoft.Maps.SpatialMath', function () {
-        directionsManager.calculateDirections({
-          successCallback: function (result) {
-            var routeOrder = givenAddresses.slice().sort(function (a, b) {
-              var indexA = givenAddresses.indexOf(a);
-              var indexB = givenAddresses.indexOf(b);
-              return result.routes[0].waypoints[indexA].location.longitude - result.routes[0].waypoints[indexB].location.longitude;
-            });
-
-            var ol = document.getElementById("routeOrder");
-            ol.innerHTML = "";
-            for (var i = 0; i < routeOrder.length; i++) {
-              var li = document.createElement("li");
-              li.appendChild(document.createTextNode((i + 1) + ". " + routeOrder[i]));
-              ol.appendChild(li);
-            }
-          }
-        });
-      });
     }
-
-    function selectedSuggestion(suggestionResult) {
-      document.getElementById("address").value = suggestionResult.formattedSuggestion;
-    }
-
-    window.onload = function () {
-      initializeMap();
-      Microsoft.Maps.loadModule('Microsoft.Maps.Autosuggest', function () {
-        var options = {
-          maxResults: 5,
-          map: map,
-          countryCode: 'US'
-        };
-
-        var manager = new Microsoft.Maps.AutosuggestManager(options);
-        manager.attachAutosuggest('#address', '#address', selectedSuggestion);
-      });
-    };
-
-    window.onerror = function(msg, url, lineNo, columnNo, error) {
-      var message = [
-        'Message: ' + msg,
-        'URL: ' + url,
-        'Line: ' + lineNo,
-        'Column: ' + columnNo,
-        'Error object: ' + JSON.stringify(error)
-      ].join(' - ');
-
-      alert(message);
-
-      return false;
-    };
-    
   </script>
-  <div id="myMap" style="position:relative;width:600px;height:400px;"></div>
 </body>
 </html>
