--- a/Index.html
+++ b/Index.html
@@ -98,7 +98,7 @@
       var start = document.getElementById("start").value;
       var end = document.getElementById("end").value;
 
-      orsClient = new OpenRouteService.Client({ key: 5b3ce3597851110001cf624890270b75be3144bea8764bf3d5915a6b }); // Replace 'YOUR_API_KEY' with your actual API key
+      orsClient = new OpenRouteService.Client({ key:'5b3ce3597851110001cf624890270b75be3144bea8764bf3d5915a6b' }); // Replace 'YOUR_API_KEY' with your actual API key
 
       var waypoints = givenAddresses.map(function (address) {
         return { lat: null, lon: null, name: address };
